# tasks-se

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  requirements.in  requirements.txt  setup.py
tasks_se/: __init__.py  autoFill.py  autoGetSale.py  autoScreenShot.py  pospalGetData.py  simulateOP.py  threading_demo.py  treading_demo.py
tasks_se/core/: config.py  demo.py  task.py
tasks_se/utils/: __init__.py  autoFill_utils.py  base_utils.py
